# mx-ninja

./: .gitignore  CMakeLists.txt  README.md
libmx/: CMakeLists.txt
libmx/base/: Base.h  ByteOrderValues.cpp  ByteOrderValues.h  CHttpClient.cpp  CHttpClient.h  Condition.cpp  Condition.h  FixedSequence.h  FixedStream.cpp  FixedStream.h  Log.h  MXMath.cpp  MXMath.h  MXString.cpp  MXString.h  MutexLock.cpp  MutexLock.h  QSort.h  README.md  Rand.cpp  Rand.h  ReadWriteLock.cpp  ReadWriteLock.h  Sequence.h  Stream.cpp  Stream.h  System.cpp  System.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  Toolkit.cpp  Toolkit.h  VarCoder.h  VarSequence.h  VarStream.cpp  VarStream.h
libmx/geometry/: Coordinate.cpp  Coordinate.h  CoordinateArraySequence.h  CoordinateFixedSequence.h  CoordinateSequence.h  Envelope.h
libmx/internal/: README.md  debug.c  debug.h  hash.c  hash.h  threadpool.c  threadpool.h
shells/: do_gcov_lcov.sh  strip_stl_cov.sh
tests/: CMakeLists.txt  Test.h  TestByteOrder.cpp  TestCondition.cpp  TestCoordSequence.cpp  TestEnvelope.cpp  TestHttpClient.cpp  TestLock.cpp  TestMXMath.cpp  TestMXString.cpp  TestStream.cpp  TestSystem.cpp  TestThreadPool.cpp
tests/CMake/: tests.cmake
